--- a/src/app/components/transaction-list/transaction-list.component.html
+++ b/src/app/components/transaction-list/transaction-list.component.html
@@ -1,5 +1,10 @@
 <div class="transaction-list-container">
-  <h2>Transactions</h2>
+  <div class="header-row">
+    <h2>Transactions</h2>
+    <span class="transaction-count" *ngIf="filteredTransactions.length > 0">
+      {{ filteredTransactions.length }}
+    </span>
+  </div>
 
   <div class="filters">
     <div class="filter-group">
